--- a/index.html
+++ b/index.html
@@ -101,6 +101,21 @@
 
 </script>
 
+
+<script type="text/javascript">var _kmq = _kmq || [];
+var _kmk = _kmk || '8fcbf00e9c2c954f94d1329f21c3602c08f6fde7';
+function _kms(u){
+  setTimeout(function(){
+    var d = document, f = d.getElementsByTagName('script')[0],
+    s = d.createElement('script');
+    s.type = 'text/javascript'; s.async = true; s.src = u;
+    f.parentNode.insertBefore(s, f);
+  }, 1);
+}
+_kms('//i.kissmetrics.com/i.js');
+_kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
+</script>
+
 	</head>
 
 	<body>
